--- a/Chat/ChatList/ChatListViewController.storyboard
+++ b/Chat/ChatList/ChatListViewController.storyboard
@@ -34,41 +34,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2TY-JE-WPb">
-                                <rect key="frame" x="10" y="52" width="355" height="583"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2TY-JE-WPb">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="242" id="dvz-Rw-hZN" customClass="ChatListCell" customModule="Chat">
-                                        <rect key="frame" x="0.0" y="28" width="355" height="242"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ChatListCell" rowHeight="70" id="dvz-Rw-hZN" customClass="ChatListCell" customModule="Chat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dvz-Rw-hZN" id="QVW-s3-9Li">
-                                            <rect key="frame" x="0.0" y="0.0" width="355" height="241.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dvz-Rw-hZN" id="QVW-s3-9Li">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="69.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZ4-Kn-Bgd">
-                                                    <rect key="frame" x="303" y="10" width="42" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZ4-Kn-Bgd">
+                                                    <rect key="frame" x="296" y="10" width="36" height="17"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="42" id="3g5-nq-Vrv"/>
-                                                        <constraint firstAttribute="height" constant="17" id="8DV-hh-b5Z"/>
+                                                        <constraint firstAttribute="height" constant="17" id="9NN-II-buO"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHR-8x-qBf">
-                                                    <rect key="frame" x="10" y="18" width="335" height="194"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iad-Wz-qwl">
+                                                    <rect key="frame" x="10" y="10" width="280" height="17"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="0pQ-bE-yS9"/>
+                                                        <constraint firstAttribute="height" constant="17" id="YKn-Fz-3Ix"/>
+                                                        <constraint firstAttribute="width" constant="280" id="tLq-QS-XjL" userLabel="width = 240"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iad-Wz-qwl">
-                                                    <rect key="frame" x="15" y="21" width="300" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHR-8x-qBf">
+                                                    <rect key="frame" x="10" y="42" width="322" height="17"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="17" id="By1-39-UCy"/>
-                                                        <constraint firstAttribute="width" constant="300" id="xl1-ia-1Ov"/>
+                                                        <constraint firstAttribute="height" constant="17" id="rrI-wa-4Oh"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -76,17 +75,17 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Iad-Wz-qwl" firstAttribute="top" secondItem="QVW-s3-9Li" secondAttribute="top" constant="10" id="5hj-tU-Z1T"/>
-                                                <constraint firstAttribute="bottom" secondItem="QHR-8x-qBf" secondAttribute="bottom" constant="10" id="5oO-5R-1iv"/>
-                                                <constraint firstAttribute="trailing" secondItem="QHR-8x-qBf" secondAttribute="trailing" constant="10" id="8kz-0a-Kpc"/>
-                                                <constraint firstAttribute="trailing" secondItem="lZ4-Kn-Bgd" secondAttribute="trailing" constant="10" id="ZVh-ih-BR9"/>
-                                                <constraint firstItem="QHR-8x-qBf" firstAttribute="leading" secondItem="QVW-s3-9Li" secondAttribute="leading" constant="10" id="btE-z0-k72"/>
-                                                <constraint firstItem="Iad-Wz-qwl" firstAttribute="leading" secondItem="QVW-s3-9Li" secondAttribute="leading" constant="10" id="d10-eR-aya"/>
-                                                <constraint firstItem="lZ4-Kn-Bgd" firstAttribute="top" secondItem="QVW-s3-9Li" secondAttribute="top" constant="10" id="f1b-L5-RDh"/>
+                                                <constraint firstItem="Iad-Wz-qwl" firstAttribute="leading" secondItem="QVW-s3-9Li" secondAttribute="leading" constant="10" id="4Gs-TL-Gj8"/>
+                                                <constraint firstAttribute="trailing" secondItem="lZ4-Kn-Bgd" secondAttribute="trailing" constant="10" id="6oX-Si-6eb"/>
+                                                <constraint firstAttribute="bottom" secondItem="QHR-8x-qBf" secondAttribute="bottom" constant="10" id="BKm-zm-P3d"/>
+                                                <constraint firstAttribute="trailing" secondItem="QHR-8x-qBf" secondAttribute="trailing" constant="10" id="N77-Ti-B0Q"/>
+                                                <constraint firstItem="lZ4-Kn-Bgd" firstAttribute="top" secondItem="QVW-s3-9Li" secondAttribute="top" constant="10" id="kbv-jT-xgS"/>
+                                                <constraint firstItem="QHR-8x-qBf" firstAttribute="leading" secondItem="QVW-s3-9Li" secondAttribute="leading" constant="10" id="rh3-Uk-SR8"/>
+                                                <constraint firstItem="Iad-Wz-qwl" firstAttribute="top" secondItem="QVW-s3-9Li" secondAttribute="top" constant="10" id="sOy-Fh-zBB"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <accessibility key="accessibilityConfiguration" identifier="ChatListCell">
-                                            <bool key="isElement" value="YES"/>
+                                            <bool key="isElement" value="NO"/>
                                         </accessibility>
                                         <connections>
                                             <outlet property="messageLabel" destination="QHR-8x-qBf" id="6zx-RE-Rdv"/>
@@ -99,10 +98,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2TY-JE-WPb" firstAttribute="top" secondItem="o3k-d8-2Zi" secondAttribute="top" constant="10" id="3Sp-MO-PlF"/>
-                            <constraint firstItem="o3k-d8-2Zi" firstAttribute="bottom" secondItem="2TY-JE-WPb" secondAttribute="bottom" constant="10" id="63s-ws-Dpq"/>
-                            <constraint firstItem="2TY-JE-WPb" firstAttribute="leading" secondItem="o3k-d8-2Zi" secondAttribute="leading" constant="10" id="LXb-Le-Y7t"/>
-                            <constraint firstItem="o3k-d8-2Zi" firstAttribute="trailing" secondItem="2TY-JE-WPb" secondAttribute="trailing" constant="10" id="uNR-kF-jLX"/>
+                            <constraint firstItem="o3k-d8-2Zi" firstAttribute="bottom" secondItem="2TY-JE-WPb" secondAttribute="bottom" id="7gH-z7-Kv8"/>
+                            <constraint firstItem="o3k-d8-2Zi" firstAttribute="trailing" secondItem="2TY-JE-WPb" secondAttribute="trailing" id="DAm-yX-vJE"/>
+                            <constraint firstItem="2TY-JE-WPb" firstAttribute="leading" secondItem="o3k-d8-2Zi" secondAttribute="leading" id="gHA-Sq-CRn"/>
+                            <constraint firstItem="2TY-JE-WPb" firstAttribute="top" secondItem="ygK-nu-0wO" secondAttribute="top" id="ihS-N1-7jm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="o3k-d8-2Zi"/>
                     </view>
