--- a/Chat/Base.lproj/ProfileViewController.storyboard
+++ b/Chat/Base.lproj/ProfileViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,13 +14,13 @@
         <!--Profile View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ProfileViewController" customModule="Chat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="profileViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ProfileViewController" customModule="Chat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nGK-w5-KLu">
-                                <rect key="frame" x="20" y="40" width="335" height="335"/>
+                                <rect key="frame" x="20" y="84" width="335" height="335"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nGK-w5-KLu" secondAttribute="height" multiplier="1:1" id="2mB-sU-sxT" userLabel="aspect = 15:15"/>
@@ -40,14 +40,14 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="About me" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FAL-at-JoD">
-                                <rect key="frame" x="20" y="437" width="335" height="164"/>
+                                <rect key="frame" x="20" y="481" width="335" height="120"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XvA-dN-Enz">
-                                <rect key="frame" x="20" y="391" width="335" height="30"/>
+                                <rect key="frame" x="20" y="435" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="tjB-R6-N5O"/>
                                 </constraints>
@@ -55,6 +55,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Lz-MG-PyG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="LWq-Si-ZDf"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="6jX-A0-Gl5">
+                                        <barButtonItem key="leftBarButtonItem" tag="1" title="Close" id="EZA-iB-nPV">
+                                            <connections>
+                                                <action selector="onCloseButtonClick:" destination="BYZ-38-t0r" id="FDl-V8-yrc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -62,16 +77,19 @@
                             <constraint firstItem="B5e-9v-Whz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8d3-GM-hia"/>
                             <constraint firstItem="nGK-w5-KLu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="97S-ft-fra"/>
                             <constraint firstItem="XvA-dN-Enz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="AzU-xp-Die"/>
+                            <constraint firstItem="7Lz-MG-PyG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="BXw-uW-DlH"/>
+                            <constraint firstItem="nGK-w5-KLu" firstAttribute="top" secondItem="7Lz-MG-PyG" secondAttribute="bottom" constant="20" id="IhD-km-bID" userLabel="Avatar Image View.top = Navigation Bar.bottom + 20"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FAL-at-JoD" secondAttribute="trailing" constant="20" id="R5L-jE-5dz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B5e-9v-Whz" secondAttribute="bottom" constant="20" id="ZgR-k7-c92"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B5e-9v-Whz" secondAttribute="trailing" constant="20" id="a4j-BH-9bI"/>
                             <constraint firstItem="XvA-dN-Enz" firstAttribute="top" secondItem="nGK-w5-KLu" secondAttribute="bottom" constant="16" id="b2f-Kl-trA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nGK-w5-KLu" secondAttribute="trailing" constant="20" id="fA8-Ul-yUW"/>
+                            <constraint firstItem="7Lz-MG-PyG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="frP-dY-1P6"/>
                             <constraint firstItem="FAL-at-JoD" firstAttribute="top" secondItem="XvA-dN-Enz" secondAttribute="bottom" constant="16" id="j18-yk-qKG"/>
-                            <constraint firstItem="nGK-w5-KLu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="jJF-0r-qyd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B5e-9v-Whz" secondAttribute="trailing" constant="20" id="k6C-NR-OAe"/>
                             <constraint firstItem="nGK-w5-KLu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kl0-9S-y2A"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XvA-dN-Enz" secondAttribute="trailing" constant="20" id="ruZ-cb-Q1G"/>
+                            <constraint firstItem="7Lz-MG-PyG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sNS-Jn-pZQ"/>
                             <constraint firstItem="FAL-at-JoD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="xAc-zS-Mz9"/>
                             <constraint firstItem="FAL-at-JoD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xYq-fv-PSe"/>
                         </constraints>
