--- a/Chat/Chat/ChatViewController.storyboard
+++ b/Chat/Chat/ChatViewController.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14109"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,10 +28,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Im-1O-kgD">
-                                            <rect key="frame" x="26" y="21" width="63" height="2"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="chC-Hw-rov"/>
-                                            </constraints>
+                                            <rect key="frame" x="-100" y="20" width="375" height="2"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -39,6 +37,7 @@
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="9Im-1O-kgD" secondAttribute="bottom" constant="10" id="32c-Mx-VJn"/>
                                         <constraint firstItem="9Im-1O-kgD" firstAttribute="top" secondItem="Iyf-pm-OQG" secondAttribute="topMargin" constant="10" id="7Jl-Ju-Xmm"/>
+                                        <constraint firstItem="9Im-1O-kgD" firstAttribute="width" relation="lessThanOrEqual" secondItem="Iyf-pm-OQG" secondAttribute="width" multiplier="3/4" id="A4v-Vk-jh4"/>
                                         <constraint firstItem="9Im-1O-kgD" firstAttribute="leading" secondItem="Iyf-pm-OQG" secondAttribute="leadingMargin" constant="10" id="jPf-xg-En7"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -55,9 +54,6 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8i-Jx-Afe">
                                             <rect key="frame" x="323" y="10" width="42" height="23.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="n01-GC-mig"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -65,6 +61,7 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="r8i-Jx-Afe" secondAttribute="trailing" constant="10" id="C9X-2o-gqX"/>
+                                        <constraint firstItem="r8i-Jx-Afe" firstAttribute="width" relation="lessThanOrEqual" secondItem="t0C-4U-hQh" secondAttribute="width" multiplier="3/4" id="P6F-kL-03A"/>
                                         <constraint firstItem="r8i-Jx-Afe" firstAttribute="top" secondItem="t0C-4U-hQh" secondAttribute="top" constant="10" id="bik-Wg-wkR"/>
                                         <constraint firstAttribute="bottom" secondItem="r8i-Jx-Afe" secondAttribute="bottom" constant="10" id="oRx-me-0L7"/>
                                     </constraints>
