--- a/Chat/Chat/ChatViewController.storyboard
+++ b/Chat/Chat/ChatViewController.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14109"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,6 +19,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="Rg2-yA-VBo">
+                            <rect key="frame" x="0.0" y="116" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GHq-92-nll">
+                                    <rect key="frame" x="10" y="10" width="200" height="24"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="200" id="fOK-F0-M9f"/>
+                                    </constraints>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UoZ-6J-Y8u">
+                                    <rect key="frame" x="288" y="10" width="77" height="24"/>
+                                    <accessibility key="accessibilityConfiguration" label="Отправиь"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="xfJ-Y8-2jH"/>
+                                    </constraints>
+                                    <state key="normal" title="Отправить"/>
+                                    <connections>
+                                        <action selector="onSendButtonPressed:" destination="Nf8-yX-o6q" eventType="touchUpInside" id="YHu-fx-Evq"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="UoZ-6J-Y8u" secondAttribute="trailing" constant="10" id="9Ca-u6-yVk"/>
+                                <constraint firstAttribute="bottom" secondItem="GHq-92-nll" secondAttribute="bottom" constant="10" id="ObD-SC-zTv"/>
+                                <constraint firstAttribute="bottom" secondItem="UoZ-6J-Y8u" secondAttribute="bottom" constant="10" id="RSq-Ha-mWG"/>
+                                <constraint firstItem="GHq-92-nll" firstAttribute="leading" secondItem="Rg2-yA-VBo" secondAttribute="leading" constant="10" id="Zxl-Kk-J6b"/>
+                                <constraint firstItem="UoZ-6J-Y8u" firstAttribute="top" secondItem="Rg2-yA-VBo" secondAttribute="top" constant="10" id="blo-U9-XVM"/>
+                                <constraint firstItem="GHq-92-nll" firstAttribute="top" secondItem="Rg2-yA-VBo" secondAttribute="top" constant="10" id="heX-4b-6Cl"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingMessageCell" rowHeight="44" id="qiw-lq-jVT" customClass="ChatCell" customModule="Chat" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -78,6 +113,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="OpH-Zj-4sg"/>
                     <connections>
+                        <outlet property="newMessageInputField" destination="GHq-92-nll" id="x7H-81-IhB"/>
                         <outlet property="tableView" destination="80N-8j-Fxa" id="FWo-bs-Zye"/>
                     </connections>
                 </tableViewController>
